removed old css file

--- a/static/styles.css
+++ b/static/styles.css
@@ -452,7 +452,7 @@ video {
     position: relative;
     justify-content: center;
     align-items: center;
-    font-size: 95%;
+    /* font-size: 100%; */
     top: 0;
     z-index: 1;
     margin: 1%;
@@ -462,7 +462,7 @@ video {
     position: relative;
     justify-content: center;
     text-align: center;
-    font-size: 110%;
+    font-size: 95%;
     top: 15%;
     max-width: 80%;
     height: auto;
@@ -472,15 +472,21 @@ video {
     overflow: auto;
 }
 
+#sportsTitle {
+    font-size: 225%;
+}
+
 .sports-sections {
     position: relative;
     justify-content: center;
     text-align: center;
     justify-content: center;
-    padding-bottom: 2%;
+    padding-bottom: 1.5%;
     height: auto;
     margin: auto;
-    font-size: 115%;
+    font-size: 95%;
+    width: 45%;
+    height: auto;
 }
 
 .divider {
@@ -495,28 +501,27 @@ video {
     width: 28%;
     min-width: 25%;
     top: 15%;
-    padding: 2%;
+    padding: 1.5%;
     margin-bottom: -2%;
 }
 
 .mini-divider {
     position: relative;
     align-self: center;
-    border-top: 1.5px solid rgb(167, 167, 167);
+    border-top: 1.5px solid rgb(99, 99, 99);
     border-bottom: none;
     border-left: none;
     border-right: none;
     margin: auto;
     height: auto;
-    max-width: 20%;
-    width: 15%;
+    width: 25%;
     padding: 2%;
     margin-bottom: -4%;
     margin-top: 1%;
 }
 
 .vertical-divider {
-    border-left: 1.5px solid rgb(167, 167, 167);
+    border-left: 1.5px dotted rgb(167, 167, 167);
     width: auto;
     height: auto;
 }
@@ -524,10 +529,25 @@ video {
 .admission {
     display: flex;
     justify-content: center;
+    margin-right: 1%;
+    margin-bottom: 3%;
 }
 
 #gamePrices {
     margin: 1%;
+}
+
+#physicals {
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    justify-content: center;
+    padding-bottom: 1.5%;
+    height: auto;
+    margin: auto;
+    font-size: 100%;
+    height: auto;
+    width: 75%;
 }
 
 /* bottom of page */
@@ -567,22 +587,31 @@ video {
     .mini-divider {
         margin: auto;
         height: auto;
-        max-width: 60%;
-        width: 40%;
+        max-width: 70%;
+        width: 60%;
         border-top: 1.5px solid rgb(167, 167, 167);
     }
 
     .vertical-divider {
-        border-left: 2px solid rgb(167, 167, 167);
+        border-left: 2px dotted rgb(99, 99, 99);
+        height: auto;
     }
 
     .sports-sections {
         margin: auto;
         height: auto;
-        font-size: 105%;
+        font-size: 100%;
         padding-bottom: 2%;
     }
 
+    .admission {
+        margin-left: 4%;
+        margin-bottom: 10%;
+    }
+
+    #gamePrices {
+        margin: 2%;
+    }
 
     /* bottom of page */
     .asterisk {
