--- a/views/sports.ejs
+++ b/views/sports.ejs
@@ -9,10 +9,13 @@
 
 <body>
     <!-- The container in which the content of the page is in -->
+
     <div class="sports-container">
+
         <!-- Top of the sports page summarizing the content of the page-->
+
         <div class="athletics-summary">
-            <h1>Spartan Athletics</h1>
+            <h1 id="sportsTitle">Spartan Athletics</h1>
             <h4>Welcome to the Spartan Athletics Page. <br> Here you can find all sorts of information regarding sports at York Tech. </h4>
             <p>Principal: Mr. Andrew Loehwing</p>
             <p>Athletic Director: Rob Caruso</p>
@@ -23,7 +26,9 @@
         <div class="divider"></div>
 
         <div class="sports-sections">
+
         <!-- Important info section of sports page. Here is where all the important information anyone will need will be easily accessed. -->
+
             <h2>Important Info</h2>
             <h3>Calendar</h3>
             The sports calendar can be viewed at the link below
@@ -33,7 +38,9 @@
             <div class="mini-divider"></div>
 
             <h3>Event Admission Prices</h3>
+
             <!-- Admission for sports events -->
+
             <div class="admission">
                 <div id="gamePrices">
                     <h5>VARSITY: </h5> 
@@ -55,12 +62,24 @@
                 </div>
             </div>
 
+            <div class="mini-divider"></div>
+
+            <div id="physicals">
+                <h3>Sports Physicals</h3>
+                The physical must be on the official PIAA CIPPE form dated JUNE 1, 2023 or later  
+                to participate in  sports for the 2023-2024 school year. These forms will be available 
+                May 30, 2023 by using the link above or they may be picked up at the kiosk, high 
+                school office, or the attendance/transportation office.
+            </div>
+
         </div>
 
         <div class="divider"></div>
 
         <div class="sports-sections">
+
         <!-- Sports announcements go here -->
+
             <h2>Announcements</h2>
 
             <h4>*Athlete of the week: Name </h4>
@@ -71,7 +90,9 @@
         <div class="divider"></div>
 
         <div class="sports-sections">
+
         <!-- Other less important info will go here -->
+        
             <h2>Other</h2>
             Here are the links to watch all Ytech Sports Games<br> <br>
             <a href="https://www.youtube.com/@ytechsports7949/featured" target="_blank" rel="noopener noreferrer">Home Games - Youtube</a><br>
@@ -80,9 +101,15 @@
             <div class="mini-divider"></div>
 
             <h3>Campus Map</h3>
-            <p>The link to the campus map is 
-                <u><a href="http://www.ytech.edu/UserFiles/Servers/Server_20326237/File/Driving%20Directions%20&%20Campus%20Map.pdf" target="_blank" rel="noopener noreferrer">here</a></u>
-            </p>
+            The link to the campus map is 
+            <u><a href="http://www.ytech.edu/UserFiles/Servers/Server_20326237/File/Driving%20Directions%20&%20Campus%20Map.pdf" target="_blank" rel="noopener noreferrer">here</a></u>
+
+        </div>
+
+        <div class="mini-divider"></div>
+
+        <div class="sports-sections">
+            <h2 style="color: rgb(153, 0, 0)">York Tech is a No Tobacco/Vaping/Animal facility</h2>
         </div>
 
         <div class="asterisk">
