--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -22,7 +22,7 @@
                 <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/" style="color: white;">Skyward</a> <br>
                 <a href="https://schoology.ytech.edu/home" style="color: white;">Schoology</a>
                 <br>
-                <a href="/2022-23Calendar.pdf" style="color:white ;">Calender</a>
+                <a href="/2022-23Calendar.pdf" style="color:white ;">Calendar</a>
 
             </div>
             <!-- all the buttons om the mainpage that take you to the other pages -->
