--- a/static/styles.css
+++ b/static/styles.css
@@ -148,7 +148,7 @@ a:link {
 
 a:hover {
 
-    background-color: #00953b;
+    background-color: #aaaaaa;
 
     text-decoration: underline;
 }
@@ -274,7 +274,6 @@ footer a {
   img {
     vertical-align: middle;
   }
-
   
   .slideshow-container {
     max-width: 1500px;
@@ -452,7 +451,7 @@ video {
     position: relative;
     justify-content: center;
     align-items: center;
-    /* font-size: 100%; */
+    font-size: 95%;
     top: 0;
     z-index: 1;
     margin: 1%;
@@ -464,7 +463,7 @@ video {
     text-align: center;
     font-size: 95%;
     top: 15%;
-    max-width: 80%;
+    max-width: 90%;
     height: auto;
     margin: auto;
     margin-top: 2%;
@@ -485,8 +484,12 @@ video {
     height: auto;
     margin: auto;
     font-size: 95%;
-    width: 45%;
+    width: 75%;
     height: auto;
+}
+
+#sports-section-text {
+    font-size: 170%;
 }
 
 .divider {
@@ -530,14 +533,14 @@ video {
     display: flex;
     justify-content: center;
     margin-right: 1%;
-    margin-bottom: 3%;
+    margin-bottom: 2%;
 }
 
 #gamePrices {
     margin: 1%;
 }
 
-#physicals {
+#sub-section {
     position: relative;
     justify-content: center;
     text-align: center;
@@ -546,8 +549,8 @@ video {
     height: auto;
     margin: auto;
     font-size: 100%;
-    height: auto;
-    width: 75%;
+    min-width: 35%;
+    max-width: 45%;
 }
 
 /* bottom of page */
@@ -566,15 +569,20 @@ video {
 @media (max-width: 650px) {
     .sports-container {
         overflow: auto;
+        font-size: 100%;
     }
 
     .athletics-summary {
         overflow: auto;
-        font-size: 95%;
+        font-size: 90%;
         height: auto;
         margin: auto;
-        max-width: 75%;
+        max-width: 80%;
         margin-bottom: 3%;
+    }
+
+    #sportsTitle {
+        font-size: 205%;
     }
 
     .divider {
@@ -600,8 +608,25 @@ video {
     .sports-sections {
         margin: auto;
         height: auto;
-        font-size: 100%;
+        font-size: 95%;
         padding-bottom: 2%;
+        max-width: 90%;
+    }
+
+    #sports-section-text {
+        
+    }
+
+    #sub-section {
+        position: relative;
+        justify-content: center;
+        text-align: center;
+        justify-content: center;
+        padding-bottom: 1.5%;
+        height: auto;
+        margin: auto;
+        font-size: 90%;
+        min-width: 100%;
     }
 
     .admission {
@@ -619,8 +644,6 @@ video {
     }
 }
 /* end athletics page css */
-
-
 
 /* Template for pages CSS */
 .container{
