--- a/views/template.ejs
+++ b/views/template.ejs
@@ -11,13 +11,13 @@
 
 <div class="container">
     <div class="left-container">
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>mr smith looks up to  Ōten Shimokawa</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
 
 
     </div>
@@ -32,13 +32,14 @@
     </div>
     
     <div class="right-container">
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>csmith@ilovehotmen.com</h1>
-        <h1>mr smith looks up to  Ōten Shimokawa</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+        <h1>Sample Text 1</h1>
+
 
 
 
