--- a/views/parents.ejs
+++ b/views/parents.ejs
@@ -18,6 +18,7 @@
                 <h1>Welcome Parents and Caregivers</h1>
 
                 <h2>What information can I access?</h1>
+                    <!-- This is what you can access -->
                     <p id="InfoIAccess">
                         Mandatory form completion: Demographics, Acceptable Use Policy, Health Form, Student Handbook
                         Sign off
@@ -41,6 +42,7 @@
                     </p>
 
                 <h2>Where do I access this information?</h2>
+                <!-- This is how you access it -->
                     <p id="WhereDoIaccess">
                         By having a student already enrolled at York Tech you automatically have an account
                         Parents of a new student, you will use the same username and password that you created when
@@ -51,6 +53,7 @@
                     </p>
 
                 <h2>How do I gain access?</h2>
+                <!-- This is how you gain the access -->
                     <p id="HowDoIGainaccess">
                         Returning Parents and Caregivers:
                         <br>
