--- a/views/sports.ejs
+++ b/views/sports.ejs
@@ -27,14 +27,14 @@
         <div class="divider"></div>
 
         <div class="sports-sections">
-            <!-- Important info section of sports page. Here is where all the important information anyone will need can be easily accessed. -->
+            <!-- Important info section of sports page. This is where all the important information about sports can be easily accessed. -->
 
             <h2 id="sports-section-text">Important Info</h2>
             <h3>Calendar</h3>
             The sports calendar can be viewed at the link below.
             <p><a href="https://ytechspartans.bigteams.com/main/calendar" target="_blank" rel="noopener noreferrer">Click Here</a></p>
 
-            <!-- mini-dividers are for sub-sections -->
+            <!-- mini-dividers are for sub-sections in the page -->
             <div class="mini-divider"></div>
 
             <div id="sub-section">
